--- a/evaluador.cbp
+++ b/evaluador.cbp
@@ -31,11 +31,17 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="evaluador.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="lista.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="lista.h" />
 		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="mapeo.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="mapeo.h" />
